Fix horizontal scrolling on mobile

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -105,7 +105,7 @@ body[data-theme="light"] [data-theme="light"] {
 
 @media (max-width: 800px) {
 	.main-sidebar {
-		width: calc(100vw - 2 * var(--root-padding));
+		width: 100%;
 		max-width: unset;
 		text-align: unset;
 	}
